# websocketocppgui

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  run.py  uidef.py  uidef.ui  urls.py
