[tool.poetry]
name = "websocketocppgui"
version = "0.1.0"
description = ""
authors = ["Christian Zellot <christian.zellot@beenergised.com>"]

[tool.poetry.dependencies]
python = "^2.7"
pygubu = "^0.10"
pyinstaller = "^3.6"
websocket-client = "^0.57.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
